ns/manserfam/wedding/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wedding
  namespace: manserfam
spec: 
  replicas: 1
  template:
    spec:
      containers:
      - image: jonas27test/goserver:latest
        name: wedding
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
          - mountPath: /static
            name: wedding-storage
      volumes:
      - name: wedding-storage
        hostPath:
          path: "/volumes/manserfam/wedding/wedding/static"
      restartPolicy: Always
