ns/manserfam/wedding/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding
  namespace: manserfam
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
