ns/manserfam/wedding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wedding
  namespace: manserfam
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - wedding.manserfam.com
    - www.wedding.manserfam.com
    secretName: wedding-cert
  rules:
  - host: wedding.manserfam.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wedding
            port: 
              name: http
